fix remove avatar btn on Safari

--- a/src/frontend/components/AvatarEditor/styles.scss
+++ b/src/frontend/components/AvatarEditor/styles.scss
@@ -10,14 +10,13 @@
     font-size: 10px;
     background-color: $grey;
     position: absolute;
+    padding: 0;
+    text-align: center;
     color: $white;
     top: -8px;
     right: -8px;
     width: 16px;
     height: 16px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     border-radius: 50%;
   }
 
